--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+.weading-plus-card {
+  padding-top: 30px;
+  padding-bottom: 50px;
+  background-color: #3f87f5;
+  color: white;
+  margin-top: -49px;
+  box-shadow: 0px 42px 34px 0px #3f87f540;
+  border-radius: 26px;
+}
